[gd_scene load_steps=2 format=3 uid="uid://bl4ktm5yxqr3d"]

[ext_resource type="Script" path="res://scripts/BattleLoot.gd" id="1"]

[node name="BattleLoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="TopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "战利品选择"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)

[node name="MainContent" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MainContent"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="MainContent/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="MessageLabel" type="Label" parent="MainContent/HBoxContainer/LeftPanel"]
layout_mode = 2
text = "战利品"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.3, 1.0, 0.3, 1)
horizontal_alignment = 1

[node name="Label" type="Label" parent="MainContent/HBoxContainer/LeftPanel"]
layout_mode = 2
text = "获得的战利品"
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainContent/HBoxContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="LootGrid" type="GridContainer" parent="MainContent/HBoxContainer/LeftPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 4

[node name="RightPanel" type="VBoxContainer" parent="MainContent/HBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MainContent/HBoxContainer/RightPanel"]
layout_mode = 2
text = "当前背包（点击丢弃以获取新战利品）"
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainContent/HBoxContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryGrid" type="GridContainer" parent="MainContent/HBoxContainer/RightPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="BottomBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="BottomBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ContinueButton" type="Button" parent="BottomBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "继续"
theme_override_font_sizes/font_size = 20

[node name="BrightnessOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="MessageDialog" type="AcceptDialog" parent="."]
initial_position = 2
size = Vector2i(400, 150)

[connection signal="pressed" from="BottomBar/MarginContainer/HBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
